[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Herbalist/poppy.png" type="Texture" id=1]
[ext_resource path="res://scripts/Poppy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 19 )

[node name="Poppy" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Poppy_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Poppy_body_exited"]
[connection signal="timeout" from="Timer" to="." method="timerFinish"]
